force-app/main/default/objects/Miembro_de_la_cohorte__c/Miembro_de_la_cohorte__c.object-meta.xml
<CustomObject>
    <description>Objeto junction entre contacto y cohorte</description>
    <label>Miembro de la cohorte</label>
    <nameField>
        <displayFormat>MC-{0000}</displayFormat>
        <label>Nombre de Miembro de la cohorte</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Miembros de la cohorte</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>