force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Certificado__c.field-meta.xml
<CustomField>
    <fullName>Certificado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Certificado?</label>
    <type>Checkbox</type>
</CustomField>