force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Cohorte__c.field-meta.xml
<CustomField>
    <fullName>Cohorte__c</fullName>
    <description>Cohorte que contendra a los empleados</description>
    <label>Cohorte</label>
    <referenceTo>Cohorte__c</referenceTo>
    <relationshipLabel>Miembros de la cohorte</relationshipLabel>
    <relationshipName>Miembros_de_la_cohorte</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>