force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Empleado__c.field-meta.xml
<CustomField>
    <fullName>Empleado__c</fullName>
    <description>Empleado que hace parte de una cohorte</description>
    <label>Empleado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Empleado Salesforce</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Miembros de la cohorte</relationshipLabel>
    <relationshipName>Miembros_de_la_cohorte</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>