force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Intentos_realizados__c.field-meta.xml
<CustomField>
    <fullName>Intentos_realizados__c</fullName>
    <label>Intentos realizados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>