force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Nota_final__c.field-meta.xml
<CustomField>
    <fullName>Nota_final__c</fullName>
    <formula>(Promedio_de_certificaci_n__c + porcentaje_final_del_entrenador__c)/2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Porcentaje de nota final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>