force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/porcentaje_final_del_entrenador__c.field-meta.xml
<CustomField>
    <fullName>porcentaje_final_del_entrenador__c</fullName>
    <description>Porcentaje de 0 a 100 que da el entrenador a un miembro de cohorte después de terminar el módulo.</description>
    <label>Porcentaje final del entrenador</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>