force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Promedio_de_certificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Promedio_de_certificaci_n__c</fullName>
    <label>Promedio de certificación</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>