force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Se_aprueba_nuevo_intento__c.field-meta.xml
<CustomField>
    <fullName>Se_aprueba_nuevo_intento__c</fullName>
    <label>¿Se aprueba nuevo intento?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Certificado__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Si</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>