force-app/main/default/objects/Miembro_de_la_cohorte__c/fields/Ultima_certiicaci_n__c.field-meta.xml
<CustomField>
    <fullName>Ultima_certiicaci_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Hace referencia al último intento de certificación realizado por el empleado en una cohorte</description>
    <label>Última certicación</label>
    <referenceTo>Intento_de_certificacion__c</referenceTo>
    <relationshipLabel>Miembros de la cohorte</relationshipLabel>
    <relationshipName>Miembros_de_la_cohorte</relationshipName>
    <type>Lookup</type>
</CustomField>